test/should-fail/vsgc1591assignParam.f3
/**
 * Regression test VSGC-1591 : Can function parameters be assigned to? No.
 *
 * @test/compile-error
 */

function foo(x : Integer) : Void {
   x = 6;
   ++x
}
